Vs code git extension is wack

--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-color: #282c34;
+    background-color: #28342b;
     font-family: 'Arial', sans-serif;
 }
 
@@ -42,4 +42,3 @@ body {
 .play-button:active {
     transform: scale(0.95);
 }
-
